# Stocktickersdata

./: .gitattributes  .gitignore  Dataretrieve.py  README.md  StockData-token.json  Stockcassandra.ipynb  config.py  jsontocsv.py  pyproject.toml
.ipynb_checkpoints/: Stockcassandra-checkpoint.ipynb  Visualizations-checkpoint.ipynb
secure-connect-stockdata/: cert  cert.pfx  config.json  cqlshrc  identity.jks  key  trustStore.jks
