[tool.poetry]
name = "final project"
version = "0.1.0"
description = "project depencencies"
authors = ["rishikadwipim <madipe19@students.rowan.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
ruff = "^0.8.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
